--- a/playinggame.html
+++ b/playinggame.html
@@ -5,13 +5,13 @@
     <title>Playing Game</title>
     <style>
         .rh {
-            color: red;
+            color: black;
             float: left;
             clear: left;
         }
 
         .bh {
-            color: blue;
+            color: black;
             float: left;
         }
 
@@ -42,20 +42,20 @@
         }
 
         .r {
-            color: red;
+            color: black;
             float: left;
             clear: left;
         }
 
         .b {
             float: left;
-            color: blue;
+            color: black;
             padding-left: 150px;
         }
 
         .ra {
-            color: white;
-            background-color: red;
+            color: black;
+            background-color: white;
             float: left;
             clear: left;
             padding-left: 50px;
@@ -65,7 +65,7 @@
         .ba {
             float: left;
             color: white;
-            background-color: blue;
+            background-color: black;
             padding-left: 50px;
             padding-right: 50px;
         }
@@ -75,7 +75,7 @@
 <body>
     <h1>Live Score</h1>
     <h2 class="him" id="firstup"></h2>
-    <img src="red.jpg" alt="Red Circle" width="150" height="150">
+    <img src="red.jpg" alt="White Circle" width="150" height="150">
     <img src="blue.jpg" alt="Blue X" width="100" height="100" class="hee">
     <br>
     <input class="ra" type="button" id="rpt" value="+1" onclick="rp()">
@@ -94,12 +94,12 @@
     document.getElementById("rn").innerText = info[1];
     document.getElementById("bn").innerText = info[2];
     var score = info[3];
-    if (info[0] == "red") {
-        document.getElementById("firstup").innerText = "Red is First Up";
-        document.getElementById("firstup").style.color = "#ff0000";
+    if (info[0] == "white") {
+        document.getElementById("firstup").innerText = "White is First Up";
+      //  document.getElementById("firstup").style.color = "#ff0000";
     } else {
-        document.getElementById("firstup").innerText = "Blue is First Up";
-        document.getElementById("firstup").style.color = "#0000ff";
+        document.getElementById("firstup").innerText = "Black is First Up";
+      //  document.getElementById("firstup").style.color = "#0000ff";
     }
     var rscore = 0;
     var bscore = 0;
@@ -124,7 +124,7 @@
                 localStorage.gh = "~" + f;
             }
             if (rscore == score) {
-                localStorage.go = "red";
+                localStorage.go = "white";
             } else {
                 localStorage.go = "blue";
             }
