--- a/startgame.html
+++ b/startgame.html
@@ -5,21 +5,22 @@
     <title>Start Game</title>
     <style>
         .r {
-            background-color: red;
+            background-color: white;
             font-size: 30px;
         }
 
         .rh {
-            color: red;
+            color: black;
         }
 
         .b {
-            background-color: blue;
+            background-color: black;
+            color: white;
             font-size: 30px;
         }
 
         .bh {
-            color: blue;
+            color: black;
         }
 
         .num {
@@ -42,14 +43,14 @@
     <h1>Start Game</h1>
     <div>
         <h3>Which Color is Throwing First?</h3>
-        <input type="button" id="red" value="Red" onclick="red()" class="r">
-        <input type="button" id="blue" value="Blue" onclick="blue()" class="b">
+        <input type="button" id="white" value="White" onclick="white()" class="r">
+        <input type="button" id="black" value="Black" onclick="black()" class="b">
     </div>
     <div>
-        <h3 class="rh">Red Player Name:</h3>
-        <input type="text" id="redname" value="">
-        <h3 class="bh">Blue Player Name:</h3>
-        <input type="text" id="bluename" value="">
+        <h3 class="rh">White Player Name:</h3>
+        <input type="text" id="whitename" value="">
+        <h3 class="bh">Black Player Name:</h3>
+        <input type="text" id="blackname" value="">
     </div>
     <div>
         <h3>What is the Game to?</h3>
@@ -63,14 +64,14 @@
 </body>
 <script>
     var first = "";
-    var rname = "";
+    var wname = "";
     var bname = "";
     var score = "";
     var custim = false;
     function start() {
-        rname=document.getElementById("redname").value;
-        bname=document.getElementById("bluename").value;
-        var data=first+"|"+rname+"|"+bname+"|";
+        wname=document.getElementById("whitename").value;
+        bname=document.getElementById("blackname").value;
+        var data=first+"|"+wname+"|"+bname+"|";
         if(custim==false){
             data+=score;
         }else{
@@ -79,15 +80,15 @@
         localStorage.gameInfo=data;
         location.replace("./playinggame.html");
     }
-    function red() {
-        first = "red";
-        document.getElementById("red").style.backgroundColor = "#00ff00";
-        document.getElementById("blue").style.backgroundColor = "#0000ff";
+    function white() {
+        first = "white";
+        document.getElementById("white").style.backgroundColor = "#00ff00";
+        document.getElementById("black").style.backgroundColor = "#000000";
     }
-    function blue() {
-        first = "blue";
-        document.getElementById("red").style.backgroundColor = "#ff0000";
-        document.getElementById("blue").style.backgroundColor = "#00ff00";
+    function black() {
+        first = "black";
+        document.getElementById("white").style.backgroundColor = "#ffffff";
+        document.getElementById("black").style.backgroundColor = "#00ff00";
     }
     function eleven() {
         score = "11";
