--- a/playinggame.html
+++ b/playinggame.html
@@ -126,7 +126,7 @@
             if (rscore == score) {
                 localStorage.go = "white";
             } else {
-                localStorage.go = "blue";
+                localStorage.go = "black";
             }
             location.replace("./gameover.html");
         }
