--- a/gameover.html
+++ b/gameover.html
@@ -51,12 +51,10 @@
     <input type="button" id="home" value="Go to Home Page" onclick="window.location.href='home.html'">
 </body>
 <script>
-    if (localStorage.go=="red") {
-        winner.innerText = "Winner is Red";
-        document.getElementById("winner").style.color = "#ff0000";
+    if (localStorage.go=="white") {
+        winner.innerText = "Winner is White";
     } else {
-        winner.innerText = "Winner is Blue";    
-        document.getElementById("winner").style.color = "#0000ff";
+        winner.innerText = "Winner is Black";    
     }   
 </script>
 
