--- a/gameover.html
+++ b/gameover.html
@@ -48,6 +48,10 @@
     <input type="button" id="startnew" value="Start New Game" onclick="window.location.href='startgame.html'">
     <br>
     <br>
+    <img src="wh.jpg" width="150" height="150" id="a">
+    <img src="bs.jpg" width="150" height="150" id="b">
+    <br>
+    <br>
     <input type="button" id="home" value="Go to Home Page" onclick="window.location.href='home.html'">
 </body>
 <script>
@@ -55,6 +59,8 @@
         winner.innerText = "Winner is White";
     } else {
         winner.innerText = "Winner is Black";    
+        document.getElementById("a").src = "bh.jpg"; 
+        document.getElementById("b").src = "ws.jpg";
     }   
 </script>
 
