--- a/historymanagement.html
+++ b/historymanagement.html
@@ -7,13 +7,48 @@
 
 <body>
     <h1>History Management</h1>
-    
+
     <input type="button" id="back" value="Back" onclick="window.location.href='history.html'">
     <input type="button" id="reset" value="Clear History" onclick="reset()">
+    <input type="text" id="d" value="">
+    <input type="button" value="press to delete entered game" onclick="del()">
+    <h3 id="historyDisplayObject"></h3>
 </body>
 <script>
+    function del() {
+        var id = document.getElementById("d").value;
+        const data = localStorage.gh.split("~");
+        var temp = "";
+        var first = true;
+        for (var i = 0; i < data.length; i++) {
+            if (i != id) {
+                if (first) {
+                    first = false;
+                    temp += data[i];
+                } else {
+                    temp += "~" + data[i];
+                }
+            }
+        }
+        localStorage.gh = temp;
+        location.replace("./historymanagement.html");
+    }
     function reset() {
         localStorage.gh = "";
+        document.getElementById("historyDisplayObject").innerText = "No Recorded Game History";
+    }
+    var rawData = localStorage.gh;
+    if (rawData != "") {
+        const data = rawData.split("~");
+        var info = "";
+        for (let i = 0; i < data.length; ++i) {
+            var tempData = data[i];
+            const tempDataArray = tempData.split("|");
+            info += "Game " + i + ": " + tempDataArray[0] + "'s Score: " + tempDataArray[1] + " " + tempDataArray[2] + "'s Score: " + tempDataArray[3] + " Date Played: " + tempDataArray[4] + "\n";
+        }
+        document.getElementById("historyDisplayObject").innerText = info;
+    } else {
+        document.getElementById("historyDisplayObject").innerText = "No Recorded Game History";
     }
 </script>
 
