Deleted scoreDisplay file as it's code was already in playinggame and bagsensing. Added an about tab that disses conge and ryan. Updated the home page witha a button to go to the about page.

--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
     <h1>Home</h1>
     <input type="button" id="history" value="Game History" onclick="window.location.href='history.html'">
     <input type="button" id="start" value="Start Game" onclick="window.location.href='startgame.html'">
+    <input type="button" id="about" value="About the Project" onclick="window.location.href='about.html'">
 </body>
 <script>
 
